Fix a bunch of miscellaneous warnings
Quiet IntelliJ by making it happy.